--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- ---------------------------------->
     <!-- root body Binding (default )    -->
     <!-- ---------------------------------->
-    <link rel="stylesheet" href="/css/root-body.css">
+    <link rel="stylesheet" href="css/root-body.css">
 
 
     <!-- ---------------------------------->
